# language-c-optics

./: README.md  language-c-optics.cabal
src/Language/C/: Optics.hs  Prelude.hs
test/: Spec.hs
